@@ -32,8 +32,8 @@ or played back on the user's desktop.
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.9.4+svn20070807"
-__date__      = "2007-08-07"
+__version__   = "0.9.4+svn20070810"
+__date__      = "2007-08-10"
 __copyright__ = "Copyright (c) 2005-2007 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
